syntax = "proto3";

package task;

service TaskService {
  rpc CreateTask(CreateTaskRequest) returns (TaskResponse);
  rpc GetTask(GetTaskRequest) returns (TaskResponse);
  rpc GetTasks(GetTasksRequest) returns (TasksResponse);
  rpc UpdateTask(UpdateTaskRequest) returns (TaskResponse);
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);
  rpc AssignTask(AssignTaskRequest) returns (TaskResponse);
  rpc UpdateTaskStatus(UpdateTaskStatusRequest) returns (TaskResponse);
  rpc GetUserTasks(GetUserTasksRequest) returns (TasksResponse);
  rpc GetDashboardData(GetDashboardDataRequest) returns (GetDashboardDataResponse);
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
  string priority = 3;
  string status = 4;
  string dueDate = 5;
  string createdBy = 6;
  string assignedTo = 7;
}

message GetTaskRequest {
  string id = 1;
}

message GetTasksRequest {
  int32 page = 1;
  int32 limit = 2;
  string status = 3;
  string priority = 4;
}

message UpdateTaskRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  string priority = 4;
  string status = 5;
  string dueDate = 6;
  string assignedTo = 7;
}

message DeleteTaskRequest {
  string id = 1;
}

message AssignTaskRequest {
  string id = 1;
  string assignedTo = 2;
}

message UpdateTaskStatusRequest {
  string id = 1;
  string status = 2;
}

message GetUserTasksRequest {
  string userId = 1;
  int32 page = 2;
  int32 limit = 3;
  string status = 4;
  string priority = 5;
  string search = 6;
}

message TaskResponse {
  Task task = 1;
}

message TasksResponse {
  repeated Task tasks = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message DeleteTaskResponse {
  string message = 1;
}

message Task {
  string id = 1;
  string title = 2;
  string description = 3;
  string priority = 4;
  string status = 5;
  string dueDate = 6;
  string createdBy = 7;
  string assignedTo = 8;
  string createdAt = 9;
  string updatedAt = 10;
}

message GetDashboardDataRequest {
  string userId = 1;
  int32 recentTasksLimit = 2;
}

message GetDashboardDataResponse {
  repeated Task recentTasks = 1;
  int32 totalCount = 2;
  int32 todoCount = 3;
  int32 inProgressCount = 4;
  int32 reviewCount = 5;
  int32 completedCount = 6;
  int32 cancelledCount = 7;
}